# architect_simulator

./: .gitignore  ArchSim.uproject  CLAUDE.md  LICENSE  README.md  environment.yml
.github/workflows/: release-gate.yml
Config/: DefaultEngine.ini  DefaultGame.ini
Content/: BP_ArchSimScenarioWidget.uasset
Plugins/FrameSolver/: FrameSolver.uplugin  README.md
Plugins/FrameSolver/Standalone/: CMakeLists.txt  README.md  build.bat  build_capi.bat  build_capi_v2.bat  build_capi_v2_cuda.bat  build_cli.bat  build_exit_property.bat  build_hp_stress.bat  build_linear_audit.bat  build_perf.bat  build_sn_cuda.bat  exit_property.cpp  frame_capi.cpp  frame_capi.h  frame_capi_v2.cpp  frame_capi_v2.h  frame_cli.cpp  frame_cli_core.cpp  frame_cli_core.h  frame_perf.cpp  hp_stress.cpp  linear_deep_audit.cpp  main.cpp
Plugins/FrameSolver/Standalone/v2/: Dispatcher.cpp  Dispatcher.h  FrameWire.h  MiniJson.h  ModelBuilder.h
Plugins/LevelSim/: LevelSim.uplugin  README.md  run_game.bat  run_smoke.bat
Research/: REALTIME_MILLION_DOF_RESEARCH.md  V3_RESEARCH_HANDOFF.md  build_research.bat
Research/R2_realtime_150k/: CANDIDATES.md  PLAN_round3_mixed_precision.md  RESULTS_round1.md  RESULTS_round2.md  RESULTS_round3_fp32_negative.md  RESULTS_round3_gpu_success.md  RESULTS_round4_scaling.md  RESULTS_round4_step3_refactor_negative.md  build_fp32_safety.bat  build_gpu_bench.bat  build_r2.bat  (+7 more)
Scripts/: run_exit_tests.ps1  run_gate.ps1  run_gpu_gate.ps1  run_pie_gate.ps1  setup_third_party.ps1
Source/: ArchSim.Target.cs  ArchSimEditor.Target.cs
Tools/: build_v3_5_showcase_map.py  check_iwyu_first_header.py  cli_roundtrip.py  complex_structure_benchmark.py  independent_precision_audit.py  opensees_compare.py  run_pie_smoke.py  setup_pie_smoke_widget.py  test_iwyu_validator.py  v2_roundtrip.py
docs/: AGENT_PROMPT_OPENSEES_MEGA_BENCHMARK.md  AGENT_PROMPT_S2_S4.md  AGENT_PROMPT_S5_S11.md  AGENT_PROMPT_S9.md  ARCHITECTURE.md  ARCHITECTURE_INDEX.md  ARCHITECT_SIM_MASTER_PLAN.md  CLI_PROTOCOL.md  FrameCoreUE_QuickStart.md  FrameCore_full.md  HANDOFF.md  HANDOFF_rhino_bridge_v2.md  HANDOFF_rhino_bridge_v2_final.md  HANDOFF_v0.1.1.md  HANDOFF_v0.1.2.md  HANDOFF_v0.1.3.md  HANDOFF_v0.1.4.md  HANDOFF_v0.1.5.md  HANDOFF_v0.1.md  HANDOFF_v0.2.0.md  HANDOFF_v0.3.0.md  HANDOFF_v0.3.1.md  HANDOFF_v0.4.0.1.md  HANDOFF_v0.4.0.md  HANDOFF_v0.5.0.md  HANDOFF_v0.5.1.md  HANDOFF_v0.5.2.md  HANDOFF_v0.5.3.md  HANDOFF_v0.5.4.md  HANDOFF_v0.6.0.md  HANDOFF_v0.6.1.md  HANDOFF_v2.10.0.md  HANDOFF_v2.11.0.md  HANDOFF_v2.11.1.md  HANDOFF_v2.3.md  HANDOFF_v2.4.md  HANDOFF_v2.5.md  HANDOFF_v2.8.1.md  HANDOFF_v2.9.0.md  HANDOFF_v22p1.md  (+79 more)
(+840 files in other folders)
